@@ -16,16 +16,15 @@
 
 package org.openecomp.sdc.be.nodeFilter;
 
-import org.junit.Test;
-import org.openecomp.sdc.be.impl.ServiceFilterUtils;
-import org.openecomp.sdc.be.model.InputDefinition;
-
-import java.util.Arrays;
-import java.util.Set;
-
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertTrue;
+
+import java.util.List;
+import java.util.Set;
+import org.junit.Test;
+import org.openecomp.sdc.be.impl.ServiceFilterUtils;
+import org.openecomp.sdc.be.model.InputDefinition;
 
 public class ServiceFilterUtilsServiceInputTest extends BaseServiceFilterUtilsTest {
 
@@ -41,7 +40,7 @@ public class ServiceFilterUtilsServiceInputTest extends BaseServiceFilterUtilsTe
 
     private Set<String> getNodeFiltersToBeDeleted(String constraintName) {
         requirementNodeFilterPropertyDataDefinition
-                .setConstraints(Arrays.asList("mem_size:\n  equal: {get_input: " + CONSTRAINT_NAME + "}\n"));
+                .setConstraints(List.of("mem_size:\n  equal: {get_input: " + CONSTRAINT_NAME + "}\n"));
         InputDefinition inputDefinition = new InputDefinition();
         inputDefinition.setName(constraintName);
         return ServiceFilterUtils.getNodesFiltersToBeDeleted(service, inputDefinition);
